Moved everything to unit tests finally (unit-test target)