@@ -6,24 +6,37 @@
     <property name="classes.dir"   value="${build.dir}/classes"/>
     <property name="src_gen.dir"   value="src_gen"/>
 
-    <path id="classpath">
-        <fileset dir="${lib.dir}" includes="**/*.jar"/>
+    <path id="rareshroom-cp">
+        <pathelement path="${classes.dir}"/>
+        <libfileset dir="${lib.dir}" includes="**/*.jar"/>
     </path>
 
     <target name="compile">
         <mkdir dir="build/classes"/>
-        <javac srcdir="src" destdir="${classes.dir}" classpathref="classpath" includeantruntime="false">
+        <javac srcdir="src" destdir="${classes.dir}" classpathref="rareshroom-cp" includeantruntime="false">
             <compilerarg line="-s ${src_gen.dir}" />
         </javac>
+        <javac srcdir="tests" destdir="${classes.dir}" classpathref="rareshroom-cp" includeantruntime="false"/>
     </target>
 
     <target name="run" depends="compile">
-        <java classname="rareshroom.EntryPoint" classpath="${classes.dir}:${lib.dir}/truffle-api.jar">
-<!--            <arg line="&#45;&#45;module-path=/home/octavel/PhD_Programs/my_programs/rareshroom/libs/truffle-api.jar"/>-->
-<!--            <arg line="&#45;&#45;add-opens=org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED"/>-->
-<!--            <arg line="&#45;&#45;add-opens=org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED"/>-->
-<!--            <arg line="&#45;&#45;add-opens=org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED"/>-->
-        </java>
+        <java classname="rareshroom.EntryPoint" classpathref="rareshroom-cp"/>
+    </target>
+
+    <target name="unit-test">
+        <junit printsummary="true" showoutput="true" outputtoformatters="true" fork="true">
+            <jvmarg line="--add-opens=org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED"/>
+            <jvmarg line="--add-opens=org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED"/>
+            <jvmarg line="--add-opens=org.graalvm.truffle/com.oracle.truffle.api.dsl=ALL-UNNAMED"/>
+
+            <classpath refid="rareshroom-cp"/>
+            <batchtest filtertrace="false">
+                <fileset dir="tests">
+                    <include name="**/*Tests.java"/>
+                </fileset>
+            </batchtest>
+            <formatter type="brief" usefile="false"/>
+        </junit>
     </target>
 
     <target name="clean">
